fixed lower nav icon position and main nav alignment

--- a/style.css
+++ b/style.css
@@ -6,14 +6,17 @@ body {
 
 .container {
     display: grid;
-    grid-gap: 1px;
+    grid-gap: none;
     grid-template-columns: 150px 2fr 4fr 2fr;
     grid-template-rows: 5fr 5fr;
 }
 
 .console {
+    align-items: left, margin: 0;
+    margin-top: 10;
     background: #484756;
-    grid-row: 1/3;
+    grid-row: 1/2;
+    
 }
 
 .history {
@@ -45,52 +48,72 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    font-size: .8em;
+    font-size: .9em;
+    font-family: monospace;
 } 
 
 /* NAV */
 .main-nav {
     display: flex;
-    list-style: none;
-    font-size: 1em;
-    margin: 0;
-    justify-content: flex-start;
+    font-family: monospace;
+    font-size: 12px;
     flex-direction: column;
+
 }
 
-.push {
+.lower-nav {
     display: flex;
-    align-items: flex-end;
-    justify-content: space-around;
-    color: #f5f5f6;
-    text-decoration: none;
-    list-style: none;
+    grid-row: 2/3;
+    grid-column: 1/2;
+    align-items: center;
+    justify-content: flex-end;
+    background: #484756;
+    flex-direction: column;   
 }
+
+#push-icons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+} 
 
 .newsFeed-text {
     display: flex;
 }
+.nav-icons {
+    margin-top: 20px;
+}
 
-#nav-icon-box{
+#settings {
   width:20px;
   height:20px;
-  background-color: pink;
+  background-color: blue;
   display: inline-block;
   border-radius: 5px;
   display:inline-block;
   text-align: center;
+  justify-content: center;
+  margin-top: 5px;
+  color: black;
 }
 
 .icon{
   font-size: 13px;
 }
 
+#initab-icon {
+    display: inline-block;
+    text-align: : bottom;
+    background-color:#484756;
+    color: #f8f8f2;
+}
+
 .icon-border {
     border-top-left-radius:2px;
-border-top-right-radius:2px;
-border-bottom-left-radius:2px;
-border-bottom-right-radius:2px;
-padding:3px 0px;
+    border-top-right-radius:2px;
+    border-bottom-left-radius:2px;
+    border-bottom-right-radius:2px;
+    padding:3px 0px;
 }
 
 li {
